# yajr

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mise.toml  pyproject.toml  requirements.lock.txt
docs/: PLAN.md
src/jinja_parser/: cli.py
src/jinja_parser/core/: __init__.py  models.py  parse.py  renderer.py  share.py  share_store.py  worker.py
src/jinja_parser/web/: app.py
tests/: test_cli.py  test_core_render.py  test_e2e_ui.py  test_live_api_smoke.py  test_mode_adapters.py  test_parsing.py  test_render_limits.py  test_security.py  test_share_codec.py  test_web_api.py
web/static/css/: site.css
web/static/js/: app.js
web/templates/: index.html  stats.html
