[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jinja-parser"
version = "0.1.0"
description = "Jinja template renderer with CLI, web API, and share links"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110.0,<0.116.0",
  "uvicorn>=0.30.0,<0.35.0",
  "jinja2>=3.1.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
ansible = ["ansible-core>=2.17.0"]
salt = ["salt>=3007.0"]
dev = [
  "pytest>=8.0.0,<8.4.0",
  "httpx>=0.27.0,<0.28.0",
]

[project.scripts]
jinja-render = "jinja_parser.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
