[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jinja-parser"
version = "0.1.0"
description = "Jinja template renderer with CLI, web API, and share links"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.128.0,<0.129.0",
  "uvicorn>=0.37.0,<0.39.0",
  "jinja2>=3.1.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
ansible = ["ansible-core>=2.15.0,<2.16.0"]
salt = [
  "salt>=3007.13,<3008.0",
  "tornado>=6.5.0",
  "looseversion>=1.3.0",
]
dev = [
  "pytest>=8.0.0,<8.4.0",
  "httpx>=0.27.0,<0.28.0",
  "playwright>=1.58.0,<1.59.0",
]

[project.scripts]
jinja-render = "jinja_parser.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
